--- a/day1review.qmd
+++ b/day1review.qmd
@@ -211,7 +211,7 @@ D. $a-2\sqrt{ab}-b$
 
 ## Combine and simplify completely $\frac{3}{x+1}-\frac{4}{x}+1$
 
-## Combine and simplify completely $\frac{\frac{y}{x}-\frac{x}{y}}{\frac{1}{y}-\frac{1}{x}$
+## Combine and simplify completely $\frac{\frac{y}{x}-\frac{x}{y}}{\frac{1}{y}-\frac{1}{x}}$
 
 ## Find all real solutions $|10x+8|=108$
 
