--- a/13502day1.qmd
+++ b/13502day1.qmd
@@ -104,7 +104,7 @@ D. $9x^4 +4x^{1/2}+7x^{2/1}$
 
 ## The plot below represents the function $f(x)$. Evaluate $f(3)$.
 <center>
-<img src="img/pgraph.JPG" width = 40% height = 40%>
+<img src="/img/pgraph.JPG" width = 40% height = 40%>
 </center>
 
 ## When $f(x) = 9x^2+5x-4$, evaluate $f(-2)$.
